# sortviz

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp  sorting_algo.hpp  sorting_task.hpp  vcpkg.json
